@@ -1,3 +1,4 @@
+* Add NULLS ordering
 * Add context domain on ir.action.act_window
 * Allow None limit in action window
 * Add has_window_functions on Database
